# notes-app

./: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  turbo.json  untitled.md
apps/desktop/: tsconfig.tsbuildinfo
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  test_2026-03-24 (1).md
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/components/: KeyboardShortcuts.tsx  Layout.tsx  SearchFilter.tsx  SidebarCalendar.tsx  SplitPane.tsx  TabBar.tsx  TopBar.tsx
apps/desktop/src/pages/: GraphPage.tsx  HomePage.tsx  NotePage.tsx  SettingsPage.tsx
apps/desktop/src/plugins/: manager.ts  timestamp.ts  viewManager.tsx  wordCount.ts
apps/desktop/src/plugins/builtins/: calendar.tsx  kanban.tsx  outline.tsx  tasks.tsx
apps/desktop/src/store/: notesStore.ts  pluginsStore.ts  syncStore.ts  tabsStore.ts
apps/desktop/src/styles/: components.css  history.css  layout.css  plugins.css  tabs.css  tokens.css
apps/desktop/src/sync/: changeTracker.ts  conflictResolver.ts  encryption.ts  index.ts  supabaseProvider.ts
apps/desktop/src/utils/: graph.ts  links.ts
apps/desktop/src/versioning/: HistoryPanel.tsx  export.ts  noteHistory.ts  store.ts
apps/web/src/components/: Icons.tsx  Layout.tsx
apps/web/src/pages/: SettingsPage.tsx
apps/web/src/styles/: layout.css
docs/: PHASE1.md  PHASE10.md  PHASE4.md  PHASE5.md  PHASE6.md  PHASE7.md  PHASE8.md  PHASE9.md
