[package]
name = "notes-app-desktop"
version = "0.1.0"
description = "A cross-platform note-taking application"
authors = ["you"]
edition = "2021"

[lib]
name = "notes_app_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
